# NLP

./: pyproject.toml
notebooks/: ComposableIndices.ipynb  Hallucination QC.ipynb
notebooks/data/test_wiki/: nyc_text.txt
