[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Erik Gafni <egafni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.0"
gpt-index = "^0.1.4"
torch = "^1.13.1"
pandas = "^1.5.2"
numpy = "^1.24.0"
scipy = "^1.9.3"
sklearn = "^0.0.post1"
jupyterlab = "^3.5.2"
matplotlib = "^3.6.2"
fsspec = "^2022.11.0"
aiohttp = "^3.8.3"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
